--- a/sign-up.css
+++ b/sign-up.css
@@ -58,6 +58,9 @@ body {
     width: 100%;
     border-radius: 30px;
     height: 15px;
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
 }
 
 .circle {
